--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-table": "^7.8.0",
+    "reactjs-popup": "^2.0.5",
     "redux": "^4.2.1",
     "sort-by": "^0.0.2"
   },
